tests/tests/failing_examples/already_owned_in_correct_scope.stderr
error[E0382]: borrow of moved value: `owned`
  --> $DIR/already_owned_in_correct_scope.rs:12:20
   |
5  |     let owned = String::from("owned");
   |         ----- move occurs because `owned` has type `std::string::String`, which does not implement the `Copy` trait
...
9  |         food = &owned;
   |                 ----- value moved here
...
12 |     println!("{}", owned);
   |                    ^^^^^ value borrowed here after move
